--- a/Desktop/portfolio-examen-front/package.json
+++ b/Desktop/portfolio-examen-front/package.json
@@ -10,8 +10,11 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@splinetool/react-spline": "^4.0.0",
     "axios": "^1.7.9",
     "bootstrap": "^5.3.3",
+    "next": "^15.1.4",
+    "process": "^0.11.10",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-router-dom": "^7.1.1",
