--- a/Desktop/portfolio-examen-front/package.json
+++ b/Desktop/portfolio-examen-front/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@splinetool/react-spline": "^4.0.0",
+    "@tsparticles/react": "^3.0.0",
     "axios": "^1.7.9",
     "bootstrap": "^5.3.3",
     "next": "^15.1.4",
@@ -18,7 +19,8 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-router-dom": "^7.1.1",
-    "react-toastify": "^11.0.2"
+    "react-toastify": "^11.0.2",
+    "tsparticles": "^3.8.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.17.0",
