--- a/Desktop/portfolio-examen-front/package.json
+++ b/Desktop/portfolio-examen-front/package.json
@@ -14,6 +14,7 @@
     "@tsparticles/react": "^3.0.0",
     "axios": "^1.7.9",
     "bootstrap": "^5.3.3",
+    "jwt-decode": "^4.0.0",
     "next": "^15.1.4",
     "process": "^0.11.10",
     "react": "^18.3.1",
